SpaceTraders/k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: spacetraders-api
  namespace: spacetraders
spec:
  selector:
    app: spacetraders-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
