SpaceTraders/k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: spacetraders-app
  namespace: spacetraders
spec:
  selector:
    app: spacetraders-app
  ports:
    - port: 80
      targetPort: 8081
  type: ClusterIP
