SpaceTraders/k8s/service-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: spacetraders-webui
  namespace: spacetraders
spec:
  selector:
    app: spacetraders-webui
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
