SpaceTraders/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spacetraders-ingress
  namespace: spacetraders
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: spacetraders.internal
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: spacetraders-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spacetraders-app
                port:
                  number: 80
